# withlox

./: .dir-locals.el  .gitattributes  CMakeLists.txt  DEVLOG.md  README.md  bucketarray.h  clicommands.cpp  clicommands.h  cloc_exclude.txt  common.h  debug_notes.txt  dynarray.h  formatbuffer.cpp  formatbuffer.h  hashtable.h  hashtable_test.cpp  hashtable_tests.cpp  imgui_helpers.cpp  imgui_helpers.h  json.c  json.h  json_error.h  logging.cpp  logging.h  main.cpp  memory.cpp  memory.h  nametable.cpp  nametable.h  nametable_test.cpp  numeric_types.h  platform.cpp  platform.h  platform_macosx.cpp  platform_win32.cpp  pretty.cpp  pretty.h  programstate.cpp  programstate.h  randonoteslinks.txt  (+13 more)
dearimgui/: imconfig.h  imgui.cpp  imgui.h  imgui_impl_sdl.cpp  imgui_internal.h
scripts/: build_makefiles.sh  cmake_gen_xcode.sh  count_lines.sh  debug_makefiles.sh  gen_makefiles.sh  run_makefiles.sh
test/: hawkthorne-journey-origin.txt
test/nested/: abed.json  annie.json  britta.json
test/rpgitem/: cloak.json  dagger.json  shield.json  wizardhat.json
